--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ Assigned to:	ThemeStarz
 
 [Color codes]
 
-Default: #b35e7f4;
+Default: #b35e7f;
 Color grey dark: #000;
 Color neutral: #edeae1;
 
@@ -118,7 +118,7 @@ Headers:		'Lato', sans-serif;
   visibility: hidden;
   content: "";
   height: 3px;
-  background-color: #b35e7f4;
+  background-color: #b35e7f;
   position: absolute;
   width: 100%;
   bottom: -10px;
@@ -132,7 +132,7 @@ Headers:		'Lato', sans-serif;
   -webkit-border-radius: 50%;
   border-radius: 50%;
   bottom: -32px;
-  background-color: #b35e7f4;
+  background-color: #b35e7f;
   height: 65px;
   width: 65px;
   position: absolute;
@@ -142,7 +142,7 @@ Headers:		'Lato', sans-serif;
   line-height: 70px;
 }
 .navigation .main-nav .icon-shortcut:hover {
-  background-color: #b35e7f4;
+  background-color: #b35e7f;
 }
 .navigation .main-nav .icon-shortcut:hover i {
   -moz-transform: rotateZ(360deg) scale(0.8);
@@ -168,7 +168,7 @@ a {
   -moz-transition: 0.3s;
   -webkit-transition: 0.3s;
   transition: 0.3s;
-  color: #b35e7f4;
+  color: #b35e7f;
 }
 a:hover, a:focus, a:active {
   color: #2b8938;
@@ -196,7 +196,7 @@ a.link.arrow:after {
   margin-left: 10px;
 }
 a.link.underline {
-  border-bottom: 3px solid #b35e7f4;
+  border-bottom: 3px solid #b35e7f;
   padding-bottom: 8px;
 }
 
@@ -208,13 +208,13 @@ address a {
   color: black;
 }
 address a:hover, address a:focus, address a:active {
-  color: #b35e7f4;
+  color: #b35e7f;
 }
 address .info {
   margin-bottom: 10px;
 }
 address .info i {
-  color: #b35e7f4;
+  color: #b35e7f;
   margin-right: 20px;
 }
 
@@ -236,7 +236,7 @@ blockquote p {
   position: relative;
 }
 blockquote footer {
-  color: #b35e7f4;
+  color: #b35e7f;
   text-transform: uppercase;
   font-size: 12px;
   font-weight: bold;
@@ -268,7 +268,7 @@ h1 {
 h2 {
   font-size: 36px;
   font-weight: lighter;
-  color: #b35e7f4;
+  color: #b35e7f;
   margin-bottom: 60px;
 }
 
@@ -327,7 +327,7 @@ img {
   background-color: #edeae1;
 }
 .bg.bg-color-default {
-  background-color: #b35e7f4;
+  background-color: #b35e7f;
 }
 .bg.bg-color-default-darker {
   background-color: #2b8938;
@@ -558,7 +558,7 @@ img {
   -moz-border-radius: 20px;
   -webkit-border-radius: 20px;
   border-radius: 20px;
-  border: 2px solid #b35e7f4;
+  border: 2px solid #b35e7f;
   padding: 5px 10px;
   color: black;
   font-weight: bold;
@@ -595,7 +595,7 @@ img {
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   border-radius: 50%;
-  background-color: #b35e7f4;
+  background-color: #b35e7f;
   color: #fff;
   padding: 10px;
 }
@@ -667,7 +667,7 @@ img {
 }
 
 .feature-box > i {
-  color: #b35e7f4;
+  color: #b35e7f;
   font-size: 56px;
   marign-bottom: 90px;
 }
@@ -749,7 +749,7 @@ img {
   margin-left: 10px;
 }
 #footer .right .bg-right {
-  background-color: #b35e7f4;
+  background-color: #b35e7f;
   height: 100%;
   width: 2000px;
   top: 0;
@@ -782,7 +782,7 @@ img {
   font-weight: bold;
 }
 .modal.workshop-detail .modal-header .time i {
-  color: #b35e7f4;
+  color: #b35e7f;
   margin-right: 5px;
 }
 
@@ -816,7 +816,7 @@ img {
   text-align: center;
 }
 .numbers .number figure {
-  color: #b35e7f4;
+  color: #b35e7f;
   font-size: 48px;
 }
 .numbers .number aside {
@@ -834,7 +834,7 @@ img {
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   border-radius: 50%;
-  background-color: #b35e7f4;
+  background-color: #b35e7f;
 }
 .pagination li a, .pagination li a:hover {
   -moz-border-radius: 50%;
@@ -865,7 +865,7 @@ img {
   color: rgba(0, 0, 0, 0.5);
 }
 .pricing ul li i {
-  color: #b35e7f4;
+  color: #b35e7f;
   font-size: 18px;
 }
 .pricing .price-box, .pricing .description {
@@ -884,7 +884,7 @@ img {
   position: relative;
 }
 .pricing .price-box.promoted {
-  background-color: #b35e7f4;
+  background-color: #b35e7f;
   color: #fff;
 }
 .pricing .price-box.promoted li, .pricing .price-box.promoted i {
@@ -919,7 +919,7 @@ img {
 }
 
 .sidebar h3 {
-  color: #b35e7f4;
+  color: #b35e7f;
   font-size: 24px;
   margin-top: 0;
 }
@@ -971,7 +971,7 @@ img {
   -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
   width: 50px;
-  background-color: #b35e7f4;
+  background-color: #b35e7f;
   position: relative;
 }
 .steps .step figure .arrow {
@@ -984,7 +984,7 @@ img {
   background-repeat: no-repeat;
 }
 .steps .step h3 {
-  color: #b35e7f4;
+  color: #b35e7f;
   font-size: 18px;
 }
 .steps .step p {
@@ -1064,13 +1064,13 @@ body, html { height: 100%; }
   margin-top: 5px;
 }
 .workshop-list .workshop .date-info .time i {
-  color: #b35e7f4;
+  color: #b35e7f;
   margin-right: 10px;
 }
 .workshop-list .workshop h4 {
   font-size: 18px;
   font-weight: bold;
-  color: #b35e7f4;
+  color: #b35e7f;
 }
 
 /* 6. Forms */
@@ -1156,13 +1156,13 @@ textarea {
   outline: none !important;
 }
 .btn.btn-default {
-  border: 2px solid #b35e7f4;
-  color: #b35e7f4;
+  border: 2px solid #b35e7f;
+  color: #b35e7f;
   background-color: transparent;
 }
 .btn.btn-default:hover, .btn.btn-default:active, .btn.btn-default:focus {
-  border: 2px solid #b35e7f4;
-  background-color: #b35e7f4;
+  border: 2px solid #b35e7f;
+  background-color: #b35e7f;
   color: #fff;
 }
 .btn.btn-default.btn-white {
@@ -1171,14 +1171,14 @@ textarea {
 }
 .btn.btn-default.btn-white:hover, .btn.btn-default.btn-white:active, .btn.btn-default.btn-white:focus {
   background-color: #fff;
-  color: #b35e7f4;
+  color: #b35e7f;
 }
 .btn.btn-default.btn-black {
   border: 2px solid black;
   color: black;
 }
 .btn.btn-default.btn-black:hover, .btn.btn-default.btn-black:active, .btn.btn-default.btn-black:focus {
-  background-color: #b35e7f4;
+  background-color: #b35e7f;
   color: #fff;
 }
 .btn.btn-default.btn-grey {
@@ -1191,20 +1191,20 @@ textarea {
   background-color: rgba(0, 0, 0, 0.1);
 }
 .btn.btn-primary {
-  background-color: #b35e7f4;
+  background-color: #b35e7f;
   color: #fff;
   border: none;
   padding: 10px 15px;
 }
 .btn.btn-primary:hover, .btn.btn-primary:active, .btn.btn-primary:focus {
-  background-color: #b35e7f4;
+  background-color: #b35e7f;
 }
 .btn.btn-primary.btn-white {
   background-color: #fff;
-  color: #b35e7f4;
+  color: #b35e7f;
 }
 .btn.btn-primary.btn-white:hover, .btn.btn-primary.btn-white:active, .btn.btn-primary.btn-white:focus {
-  color: #b35e7f4;
+  color: #b35e7f;
 }
 .btn.btn-big {
   -moz-border-radius: 40px;
@@ -1236,7 +1236,7 @@ textarea {
   padding: 10px 8px;
 }
 .btn.time-radio.active {
-  background-color: #b35e7f4;
+  background-color: #b35e7f;
   color: #fff;
 }
 .btn.time-radio.not-available {
