--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1104,12 +1104,12 @@ input[type="text"]:active, input[type="text"]:focus, input[type="email"]:active,
   box-shadow: none;
   border-color: rgba(0, 0, 0, 0.2);
 }
-input[type="text"]:hover, input[type="email"]:hover, input[type="date"]:hover, input[type="time"]:hover, input[type="search"]:hover, input[type="password"]:hover, input[type="number"]:hover, input[type="tel"]:hover, textarea.form-control:hover {
+/*input[type="text"]:hover, input[type="email"]:hover, input[type="date"]:hover, input[type="time"]:hover, input[type="search"]:hover, input[type="password"]:hover, input[type="number"]:hover, input[type="tel"]:hover, textarea.form-control:hover {
   -moz-box-shadow: none;
   -webkit-box-shadow: none;
   box-shadow: none;
   border-color: rgba(0, 0, 0, 0.25);
-}
+}*/
 
 .input-group input {
   min-height: 38px;
